--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ousama Abou Khalil - Mobile Developer</title>
-    <meta name="description" content="Experienced mobile developer specializing in React Native, Flutter, and native iOS/Android development." />
+    <title>Ousama</title>
   </head>
   <body>
     <div id="root"></div>
